feat: add order payment dialog
